[package]
name = "dotdesktop"
description = "Tools and parser for XDG Desktop Entry files (\".desktop\" files)"
license = "MIT OR Apache-2.0"

version = "0.1.0-dev"
edition = "2021"
rust-version = "1.60.0"

authors = ["Fabio Valentini <decathorpe@gmail.com>"]
readme = "README.md"
exclude = ["/tests/", "/.github/", "/rustfmt.toml"]
#categories = []
#keywords = []
#repository = "https://github.com/ironthree/dotdesktop"

[dependencies]
indexmap = "2"
once_cell = "1"
regex = "1"
thiserror = "1"

[dev-dependencies]
glob = "0.3"

[profile.release]
codegen-units = 1
lto = true
