[package]
name = "keyfile"
description = """Parse, write, and modify files with the glib2 KeyFile format
 (based on the XDG Desktop Entry Specification)"""
license = "MIT OR Apache-2.0"

publish = false
version = "0.1.0-dev"
edition = "2021"
rust-version = "1.60.0"

authors = ["Fabio Valentini <decathorpe@gmail.com>"]
readme = "README.md"
exclude = ["/tests/", "/.github/", "/rustfmt.toml"]
#categories = []
#keywords = []
repository = "https://github.com/ironthree/keyfile"

[dependencies]
indexmap = "2"
once_cell = "1"
regex = "1"
thiserror = "1"

[dev-dependencies]
anyhow = "1"
glob = "0.3"

[profile.release]
codegen-units = 1
lto = true
